# PCSO_results_scraper

./: .gitignore  build.sh  pyproject.toml
Extraction/: db_writer.py  db_writer_postgres.py  db_writer_sqlite.py  extractor.py
Log/: log.py
PCSO_results_scraper/tests/: test_Extraction_sqlite.py
container/: build.sh  entrypoint.sh
scraper_app/: extractor.py
scraper_app/Extraction/: db_config_sample.py  db_writer_postgres.py  db_writer_sqlite.py
scraper_app/Log/: log.py
tests/: aux_methods.py
