[tool.poetry]
name = "PCSO_results_scraper"
version = "0.1.0"
description = "Scrape and dump PCSO results to an sqlite database"
authors = ["Alain Igban <apigban@gmail.com>"]
maintainers = ["Alain Igban <apigban@gmail.com>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/apigban/PCSO_results_scraper"
documentation = "https://github.com/apigban/PCSO_results_scraper"

[tool.poetry.dependencies]
python = "^3.8.2"
lxml = "*"
sqlalchemy = "*"
requests = "^2.23.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
